[package]
name = "goout_ical"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
axum = { version = "0.6.1" }
chrono = { version = "0.4", features = ["serde"] }
icalendar = { version = "0.15", no-default-features = true }
reqwest = { version = "0.11", features = ["gzip", "deflate", "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.23", features = ["full"] }
tower-http = { version = "0.3", features = ["trace", "compression-gzip"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
xflags = { version = "0.3" }